--- a/mavenproject1/src/main/java/com/mycompany/mavenproject1/Ventanas/FormularioJuez.form
+++ b/mavenproject1/src/main/java/com/mycompany/mavenproject1/Ventanas/FormularioJuez.form
@@ -54,18 +54,10 @@
                   </Group>
                   <EmptySpace min="-2" pref="53" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="jLabel6" alignment="0" min="-2" max="-2" attributes="0"/>
                       <Component id="CajaGenero" alignment="0" min="-2" pref="110" max="-2" attributes="0"/>
                       <Component id="jLabel5" alignment="0" min="-2" max="-2" attributes="0"/>
-                      <Group type="102" alignment="0" attributes="0">
-                          <Component id="BotonTecnico" min="-2" pref="86" max="-2" attributes="0"/>
-                          <EmptySpace max="-2" attributes="0"/>
-                          <Component id="BotonJugador" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace type="separate" max="-2" attributes="0"/>
-                          <Component id="BotonLider" min="-2" max="-2" attributes="0"/>
-                      </Group>
                   </Group>
-                  <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                  <EmptySpace min="0" pref="244" max="32767" attributes="0"/>
               </Group>
               <Group type="102" alignment="0" attributes="0">
                   <Group type="103" groupAlignment="0" attributes="0">
@@ -132,17 +124,9 @@
                       </Group>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="CampoCedula" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jLabel6" alignment="3" min="-2" max="-2" attributes="0"/>
-                  </Group>
+                  <Component id="CampoCedula" min="-2" max="-2" attributes="0"/>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="jLabel3" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="BotonTecnico" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="BotonJugador" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="BotonLider" alignment="3" min="-2" max="-2" attributes="0"/>
-                  </Group>
+                  <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="1" attributes="0">
                       <Group type="102" alignment="1" attributes="0">
@@ -226,26 +210,6 @@
         <Component class="javax.swing.JLabel" name="jLabel5">
           <Properties>
             <Property name="text" type="java.lang.String" value="G&#xc9;NERO DEL PARTICIPANTE"/>
-          </Properties>
-        </Component>
-        <Component class="javax.swing.JLabel" name="jLabel6">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="ELIJA EL TIPO DE PARTICIPANTE"/>
-          </Properties>
-        </Component>
-        <Component class="javax.swing.JRadioButton" name="BotonTecnico">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="T&#xc9;CNICO"/>
-          </Properties>
-        </Component>
-        <Component class="javax.swing.JRadioButton" name="BotonJugador">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="JUGADOR"/>
-          </Properties>
-        </Component>
-        <Component class="javax.swing.JRadioButton" name="BotonLider">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="LIDER JUGADOR"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel10">
