Cambios que hicimos en clase

--- a/mavenproject1/src/main/java/com/mycompany/mavenproject1/Ventanas/VerDatos.form
+++ b/mavenproject1/src/main/java/com/mycompany/mavenproject1/Ventanas/VerDatos.form
@@ -188,6 +188,15 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="CampoDato1">
+          <Properties>
+            <Property name="editable" type="boolean" value="false"/>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="CampoDato1ActionPerformed"/>
+          </Events>
+          <AuxValues>
+            <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="9"/>
+          </AuxValues>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel2">
           <Properties>
@@ -195,9 +204,15 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="CampoDato2">
+          <Properties>
+            <Property name="editable" type="boolean" value="false"/>
+          </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="CampoDato2ActionPerformed"/>
           </Events>
+          <AuxValues>
+            <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="9"/>
+          </AuxValues>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel3">
           <Properties>
