--- a/mavenproject1/src/main/java/com/mycompany/mavenproject1/Ventanas/FormularioPersona.form
+++ b/mavenproject1/src/main/java/com/mycompany/mavenproject1/Ventanas/FormularioPersona.form
@@ -251,10 +251,12 @@
         <Component class="javax.swing.JComboBox" name="CajaGenero">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="3">
+              <StringArray count="5">
                 <StringItem index="0" value="FEMENINO"/>
                 <StringItem index="1" value="MASCULINO"/>
-                <StringItem index="2" value=" "/>
+                <StringItem index="2" value="MIXTO"/>
+                <StringItem index="3" value=" "/>
+                <StringItem index="4" value=" "/>
               </StringArray>
             </Property>
           </Properties>
